asm_tests/other_testfiles/invalid_files/error14.s
.name "MORO"
.comment "MORJESTA!"

aff r1, 
